crates/plotnik-tests/tests/02-parser/recovery_validation/capture_type_string.txt
Q = (a) @x :: string
------------------ DIAGNOSTICS -------------------
error: unknown capture type `string`
 --> query.ptk:1:15
  |
1 | Q = (a) @x :: string
  |               ^^^^^^
  |
help: use `:: text`
  |
1 - Q = (a) @x :: string
1 + Q = (a) @x :: text
  |
help: write `:: text`, `:: bool`, or a PascalCase custom capture type
